--- a/themes/hugo-coder/assets/scss/_content_rtl.scss
+++ b/themes/hugo-coder/assets/scss/_content_rtl.scss
@@ -7,8 +7,19 @@ body.rtl {
           margin-right: 0;
         }
       }
-      .tags,
+      .tags {
+        color: #666666;
+        font-size: large !important;
+        @media only screen and (max-width : 768px) {
+          font-size: small;
+        }
+      }
       .categories {
+        color: #666666;
+        font-size: large;
+        @media only screen and (max-width : 768px) {
+          font-size: small;
+        }
         i {
           margin-left: 0.5rem;
           margin-right: 0;
@@ -21,11 +32,14 @@ body.rtl {
     ul {
       li {
         .date {
+          color: #666666;
+          font-size: large;
           text-align: left;
           margin-left: 3.0rem;
           margin-right: 0;
           @media only screen and (max-width : 768px) {
             text-align: right;
+            font-size: small;
           }
         }
       }
