--- a/themes/hugo-coder/assets/scss/_navigation.scss
+++ b/themes/hugo-coder/assets/scss/_navigation.scss
@@ -14,6 +14,7 @@
     &:focus {
       color: $link-color
     }
+    color: $header-color;
   }
   .navigation-title {
     letter-spacing: 0.1rem;
