--- a/themes/hugo-coder/assets/scss/_variables.scss
+++ b/themes/hugo-coder/assets/scss/_variables.scss
@@ -10,6 +10,7 @@ $header-color: #666666 !default;
 $alt-bg-color: #E0E0E0 !default;
 $alt-fg-color: #000 !default;
 $link-color: #428bca !default;
+$orange: #FFA500 !default;
 
 // Colors dark
 $bg-color-dark: #212121 !default;
