--- a/themes/hugo-coder/assets/scss/_variables.scss
+++ b/themes/hugo-coder/assets/scss/_variables.scss
@@ -4,7 +4,7 @@ $heading-font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, 
 $code-font-family: 'Source Code Pro', 'Lucida Console', monospace;
 
 // Colors
-$bg-color: #FAFAFA !default;
+$bg-color: #FFFFFF !default;
 $fg-color: #212121 !default;
 $header-color: #666666 !default;
 $alt-bg-color: #E0E0E0 !default;
