--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -109,7 +109,7 @@ pre {
   font-weight: 400;
   line-height: 2.6rem;
   margin: 2.0rem 0 2.0rem 0;
-  padding: 0 2.0rem;
+  padding: 2.0rem;
   overflow-x: auto;
   code {
     display: inline-block;
