--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -85,6 +85,8 @@
 
       gtag('config', 'UA-154678195-1');
     </script>
+
+    <script data-ad-client="ca-pub-1886683614725279" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
 
   {{ $csClass := "colorscheme-light" }}
