Add SEO improve

--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -249,3 +249,8 @@ img {
   margin-bottom: 10px;
   -webkit-box-shadow: 0 0 10px #555;
 }
+
+.footer-taxonomy {
+  margin: 10px 10px;
+  font-size: medium;
+}
