--- a/themes/hugo-coder/layouts/dev/list.html
+++ b/themes/hugo-coder/layouts/dev/list.html
@@ -3,7 +3,7 @@
 {{ end }}
 {{ define "content" }}
   <section class="container list">
-    <h1 class="title">{{ .Title }} Posts</h1>
+    <!-- <h1 class="title">{{ .Title }} Posts</h1> -->
 
     <ul>
       {{- range .Paginator.Pages -}}
