--- a/themes/hugo-coder/layouts/dev/single.html
+++ b/themes/hugo-coder/layouts/dev/single.html
@@ -21,7 +21,7 @@
               {{ $readTime := mul (div (countwords .Content) 220.0) 60 }}
               {{ $minutes := math.Floor (div $readTime 60) }}
               {{ $seconds := mod $readTime 60 }}
-              Reading time: {{ $minutes }}:{{ $seconds }}
+              {{ $minutes }}:{{ $seconds }}
               <!-- {{ i18n "reading_time" .ReadingTime }} -->
             </span>
           </div>
