Add Baidu site verify

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -93,6 +93,9 @@
     </script>
 
     <script data-ad-client="ca-pub-1886683614725279" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+    <meta name="baidu-site-verification" content="TiReu51WyJ" />
+
   </head>
 
   {{ $csClass := "colorscheme-light" }}
