remove rss feed in tag/category/list && add google structed data

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -18,6 +18,8 @@
     {{ template "_internal/twitter_cards.html" . }}
     {{ template "_internal/opengraph.html" . }}
 
+    {{ partial "schema.html" . }}
+
     {{ if .Permalink }}
       <base href="{{ .Permalink }}">
     {{ end }}
