--- a/layouts/shortcodes/ad_embed_post.html
+++ b/layouts/shortcodes/ad_embed_post.html
@@ -1,4 +1,4 @@
-{{ if not (in .Page.URL "/amp/") }}
+{{ if not (in .Page.Permalink "/amp/") }}
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block; text-align:center;"
