add image lazyload

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -93,3 +93,20 @@ H6 {
 [type=checkbox], [type=radio] {
     margin: 0 10px;
 }
+
+.img svg,
+.img img {
+  margin: 0;
+  width: 100%;
+  height: auto;
+}
+
+.img {
+  position: relative
+}
+
+.img img {
+  position: absolute;
+  top:0;
+  left:0;
+}
