--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -84,19 +84,14 @@
 
     {{ hugo.Generator }}
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154678195-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-154678195-1');
-    </script>
-
-    <script data-ad-client="ca-pub-1886683614725279" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
     <meta name="baidu-site-verification" content="TiReu51WyJ" />
+
+    {{ if or (in .Permalink "/dev/") (in .Permalink "/self/") (in .Permalink "/money/") }}
+    {{ if not (in .Permalink "/amp/") }}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script src="https://unpkg.com/lazysizes@5.2.0/lazysizes.js" async=""></script>
+    {{ end }}
+    {{ end }}
 
   </head>
 
@@ -117,7 +112,16 @@
       {{ partial "footer.html" . }}
     </main>
 
-    {{ template "_internal/google_analytics.html" . }}
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154678195-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-154678195-1');
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
 
   </body>
 
