--- a/themes/hugo-coder/layouts/money/single.html
+++ b/themes/hugo-coder/layouts/money/single.html
@@ -31,7 +31,11 @@
       </header>
 
       <div>
-        {{ .Content }}
+        {{ $PATTERN_EMPTY_ALT := "<img src=\"([^\"]+)\" alt=\"([^\"]+)\">" }}
+        {{ $PATTERN_ALT := "<img src=\"([^\"]+)\" alt=\"\">" }}
+        {{ $REPLACEMENT := "<img src=\"$1\" alt=\"$2\" class=\"lazyload\" loading=\"lazy\"/>" }}
+        {{ $outContent := .Content | replaceRE $PATTERN_EMPTY_ALT $REPLACEMENT | replaceRE $PATTERN_ALT $REPLACEMENT | safeHTML }}
+        {{ $outContent }}
       </div>
 
       <footer>
