--- a/themes/hugo-coder/layouts/_default/baseof.amp.html
+++ b/themes/hugo-coder/layouts/_default/baseof.amp.html
@@ -10,7 +10,7 @@
 
   {{ partial "amp/header" . }}
 
-  <link rel="canonical" href="{{ .Permalink }}">
+  <link rel="canonical" href="{{ replace .Permalink "/amp/" "/" }}">
 
   <link rel="icon" href="/favicon.png" type="image/png" sizes="144x144">
 
