--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -1,9 +1,14 @@
 <footer class="footer">
   <div class="footer-taxonomy">
+    <a href="https://wiki.bmpi.dev/">Wiki</a>
+    👆
+    <a href="https://talk.bmpi.dev/">Talk</a>
+  </div>
+  <div class="footer-taxonomy">
     <a href= {{ relLangURL "tags" }} >Tags</a>
-    /
+    👈
     <a href= {{ relLangURL "categories" }} >Categories</a>
-    /
+    👉
     <a href= {{ relLangURL "series" }} >Series</a>
   </div>
   <section class="container">
