--- a/themes/hugo-coder/layouts/self/single.html
+++ b/themes/hugo-coder/layouts/self/single.html
@@ -36,6 +36,14 @@
         {{ $REPLACEMENT := "<img src=\"$1\" alt=\"$2\" class=\"lazyload\" loading=\"lazy\"/>" }}
         {{ $outContent := .Content | replaceRE $PATTERN_EMPTY_ALT $REPLACEMENT | replaceRE $PATTERN_ALT $REPLACEMENT | safeHTML }}
         {{ $outContent }}
+
+        <div style="text-align: center;color: darkgray;">
+          {{ if eq .Site.Language.Lang "zh-cn" }}
+          <p>本作品采用<a href="http://creativecommons.org/licenses/by-nc-nd/4.0/" style="color: darkgray;">知识共享署名-非商业性使用-禁止演绎 4.0 国际许可协议</a>进行许可</p>
+          {{ else }}
+          <p>This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/" style="color: darkgray;">CC BY-NC-ND 4.0</a></p>
+          {{ end }}
+        </div>
       </div>
 
       <footer>
