--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -5,6 +5,8 @@
     <a href="https://talk.bmpi.dev/">Talk</a>
     ⚔️
     <a href= {{ relLangURL "affiliate" }} >Affiliate</a>
+    ⚔️
+    <a href="https://tinyletter.com/i365">Newsletter</a>
   </div>
   <div class="footer-taxonomy">
     <a href= {{ relLangURL "tags" }} >Tags</a>
