fix amp img ratio error

--- a/themes/hugo-coder/layouts/partials/stylesheet.html
+++ b/themes/hugo-coder/layouts/partials/stylesheet.html
@@ -122,3 +122,18 @@ a{color:#1d1d1d}footer ul{display:block;padding:0;margin:0}footer ul li{display:
 a{padding:0;color:#ff1d55}.boxes .box p{color:dimgray;font-size:12px;margin:7.5px 0}@media (max-width:900px){.boxes
 .box{-ms-flex-preferred-size:45%;flex-basis:45%}}@media (max-width:500px){.boxes
 .box{-ms-flex-preferred-size:100%;flex-basis:100%}}
+
+.fixed-container {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  margin: auto;
+}
+
+amp-img.contain img {
+  object-fit: contain;
+}
+
+.footnotes {
+  overflow-wrap: break-word;
+}
