--- a/themes/hugo-coder/layouts/self/single.amp.html
+++ b/themes/hugo-coder/layouts/self/single.amp.html
@@ -23,7 +23,7 @@
       <div>
         {{ $PATTERN_EMPTY_ALT := "<img src=\"([^\"]+)\" alt=\"([^\"]+)\">" }}
         {{ $PATTERN_ALT := "<img src=\"([^\"]+)\" alt=\"\">" }}
-        {{ $REPLACEMENT := "<amp-img src=\"$1\" alt=\"$2\" layout=\"responsive\" width=\"266\" height=\"150\"></amp-img>" }}
+        {{ $REPLACEMENT := "<div class=\"fixed-container\"><amp-img class=\"contain\" src=\"$1\" alt=\"$2\" layout=\"fill\"></amp-img></div>" }}
         {{ $outContent := .Content | replaceRE $PATTERN_EMPTY_ALT $REPLACEMENT | replaceRE $PATTERN_ALT $REPLACEMENT | safeHTML }}
         {{ $outContent }}
       </div>
