--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -7,11 +7,11 @@
     <a href= {{ relLangURL "affiliate" }} >Affiliate</a>
   </div>
   <div class="footer-taxonomy">
-    <a href= {{ relLangURL "tags" }} >Tags</a>
+    <a href= {{ relLangURL "tags" }} style="color: #B36D61;">Tags</a>
     👈
-    <a href= {{ relLangURL "categories" }} >Categories</a>
+    <a href= {{ relLangURL "categories" }} style="color: #FF8C31;">Categories</a>
     👉
-    <a href= {{ relLangURL "series" }} >Series</a>
+    <a href= {{ relLangURL "series" }} style="color: #519A73;">Series</a>
   </div>
   <section class="container">
     {{ with .Site.Params.footercontent | safeHTML }}
