--- a/static/css/main.css
+++ b/static/css/main.css
@@ -222,3 +222,14 @@ fontawesome minify
 .far {
     font-weight: 400
 }
+
+.badge {
+    /* background-color: beige; */
+    /* color: black; */
+    display: inline-block;
+    /* padding-left: 10px; */
+    /* padding-right: 10px; */
+    text-align: center;
+    border-radius: 100%;
+    font-size: 12px;
+}
