forbid google crawl wiki and talk domain

--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div class="footer-taxonomy">
-    <a href="https://wiki.bmpi.dev/">Wiki</a>
+    <a href="https://wiki.bmpi.dev/" rel="nofollow">Wiki</a>
     ⚔️
-    <a href="https://talk.bmpi.dev/">Talk</a>
+    <a href="https://talk.bmpi.dev/" rel="nofollow">Talk</a>
     ⚔️
     <a href= {{ relLangURL "affiliate" }} >Affiliate</a>
   </div>
