--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -5,6 +5,8 @@
     <a href="https://talk.bmpi.dev/" rel="nofollow">Talk</a>
     ⚔️
     <a href= {{ relLangURL "affiliate" }} >Affiliate</a>
+    ⚔️
+    <a href="https://wechat.bmpi.dev/" rel="nofollow">Wechat</a>
   </div>
   <div class="footer-taxonomy">
     <a href= {{ relLangURL "tags" }} style="color: #B36D61;">Tags</a>
