--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -6,7 +6,7 @@
     ⚔️
     <a href= {{ relLangURL "affiliate" }} >Affiliate</a>
     ⚔️
-    <a href="https://wechat.bmpi.dev/" rel="nofollow">Wechat</a>
+    <a href= {{ relLangURL "tool" }} >Tool</a>
   </div>
   <div class="footer-taxonomy">
     <a href= {{ relLangURL "tags" }} style="color: #B36D61;">Tags</a>
