--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -4,6 +4,8 @@
     ⚔️
     <a href="https://talk.bmpi.dev/" rel="nofollow">Talk</a>
     ⚔️
+    <a href="https://tg.bmpi.dev/">TG</a>
+    ⚔️
     <a href= {{ relLangURL "affiliate" }} >Affiliate</a>
     ⚔️
     <a href= {{ relLangURL "tool" }} >Tool</a>
