--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -1,14 +1,19 @@
 <footer class="footer">
   <div class="footer-taxonomy">
-    <a href="https://wiki.bmpi.dev/" rel="nofollow">Wiki</a>
-    ⚔️
-    <a href="https://talk.bmpi.dev/" rel="nofollow">Talk</a>
-    ⚔️
-    <a href="https://tg.bmpi.dev/">TG</a>
-    ⚔️
-    <a href= {{ relLangURL "affiliate" }} >Affiliate</a>
-    ⚔️
-    <a href= {{ relLangURL "tool" }} >Tool</a>
+    <div style="margin-bottom: 10px;">
+      <a href="https://wiki.bmpi.dev/" rel="nofollow">Wiki</a>
+      ⚔️
+      <a href="https://talk.bmpi.dev/" rel="nofollow">Talk</a>
+      ⚔️
+      <a href="https://tg.bmpi.dev/">TG</a>
+    </div>
+    <div>
+      <a href= {{ relLangURL "affiliate" }} >Affiliate</a>
+      ⚡️
+      <a href= {{ relLangURL "tool" }} >Tool</a>
+      ⚡️
+      <a href= {{ relLangURL "link" }} >Link</a>
+    </div>
   </div>
   <div class="footer-taxonomy">
     <a href= {{ relLangURL "tags" }} style="color: #B36D61;">Tags</a>
