--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -4,6 +4,8 @@
       <a href="https://wiki.bmpi.dev/" rel="nofollow">Wiki</a>
       ⚔️
       <a href="https://talk.bmpi.dev/" rel="nofollow">Talk</a>
+      ⚔️
+      <a href="https://www.notion.so/mdw/e0ed086e701a4d0aaa4839d2c7aa62ea" rel="nofollow">Portfolio</a>
     </div>
     <div>
       <a href= {{ relLangURL "affiliate" }} >Affiliate</a>
